--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,3 +12,15 @@
 .container{
     @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
 }
+
+.btn {
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    font-size: 0.8rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    color: #fff;
+}
